--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,6 +3,11 @@ languageCode: en-us
 title: Rori's Blog
 theme: hugo-bearcub
 
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
+
 menu:
   main:
     - name: Home
