--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,20 @@ baseURL: https://rorimwema.github.io/
 languageCode: en-us
 title: Clint Rori
 theme: hugo-bearcub
+menu:
+  main:
+    - identifier: home
+      name: Home
+      url: /
+      weight: 10
+    - identifier: posts
+      name: Posts
+      url: /posts/
+      weight: 20
+    - identifier: about
+      name: About
+      url: /about/
+      weight: 30
 
 markup:
   goldmark:
