Add Projects page with minimal design and improve mobile menu

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,6 +12,10 @@ menu:
       name: Posts
       url: /posts/
       weight: 20
+    - identifier: projects
+      name: Projects
+      url: /projects/
+      weight: 25
     - identifier: about
       name: About
       url: /about/
