--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,10 +16,14 @@ menu:
       name: Projects
       url: /projects/
       weight: 25
+    - identifier: now
+      name: Now
+      url: /now/
+      weight: 30
     - identifier: about
       name: About
       url: /about/
-      weight: 30
+      weight: 35
     - identifier: categories
       name: Categories
       url: /categories/
