feat: add buddha favicon and update content
- Add buddha icon as favicon
- Update homepage greeting with custom SVG
- Clean up now page

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,8 @@ baseURL: https://rorimwema.github.io/
 languageCode: en-us
 title: Clint Rori
 theme: hugo-bearcub
+params:
+  favicon: /buddha-icon.svg
 menu:
   main:
     - identifier: home
