feat: add new post 'The Disappearance of Wonder' with image
- Add dont-grow-up.md post with figure shortcode for image
- Update GitHub workflow to include --buildFuture flag
- Rebuild site with new post (25 pages total)

--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -64,6 +64,7 @@ jobs:
           hugo \
             --gc \
             --minify \
+            --buildFuture \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
 
       - name: Upload artifact
