feat: add new post 'We Are Just Conscious Animals'

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -35,3 +35,13 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+      
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+
+services:
+  rss:
+    limit: 10
